--- a/app/views/users/add-paleontological-form.template.html
+++ b/app/views/users/add-paleontological-form.template.html
@@ -126,12 +126,12 @@
 				</div>
 				<div class="col-sm-4">
 					<label>08. {{"pal.ngayDinhTen" | translate }}: </label>
-					<select ng-model="date_ndt" class="select-date">
+					<select ng-model="data.date_ndt" class="select-date">
                         <option value="dd/mm/yyyy">Full date</option>
                         <option value="mm/yyyy">Mon/Year</option>
                         <option value="yyyy">Year</option>
                     </select>
-					<input type="text" title="{{tooltips['ngayDinhTen']}}" id="ngayDinhTen" name="ngayDinhTen" ng-model="data.ngayDinhTen" placeholder="{{date_ndt}}" class="input-form form-control datepicker" >
+					<input type="text" title="{{tooltips['ngayDinhTen']}}" id="ngayDinhTen" name="ngayDinhTen" ng-model="data.ngayDinhTen" placeholder="{{data.date_ndt}}" class="input-form form-control datepicker" >
 				</div>
 			</div>
 			<div class="row">
@@ -269,12 +269,12 @@
 			<div class="row">
 				<div class="col-sm-4">
 					<label>19. {{"pal.thoiGianThuMau" | translate }} <span class="has-required">(*)</span>:</label>
-					<select ng-model="date_tgtm" class="select-date">
+					<select ng-model="data.date_tgtm" class="select-date">
                         <option value="dd/mm/yyyy">Full date</option>
                         <option value="mm/yyyy">Mon/Year</option>
                         <option value="yyyy">Year</option>
                     </select>
-					<input type="text" title="{{tooltips['thoiGianThuMau']}}" name="thoiGianThuMau" ng-model="data.thoiGianThuMau" id="thoiGianThuMau" placeholder="{{date_tgtm}}" class="input-form form-control datepicker">
+					<input type="text" title="{{tooltips['thoiGianThuMau']}}" name="thoiGianThuMau" ng-model="data.thoiGianThuMau" id="thoiGianThuMau" placeholder="{{data.date_tgtm}}" class="input-form form-control datepicker">
 				</div>
 				<div class="col-sm-4">
 					<label>20. {{"pal.nguoiThuMau" | translate }}<span class="has-required">(*)</span>:</label>
@@ -420,12 +420,12 @@
 			<div class="row">
 				<div class="col-sm-6">
 					<label>30. {{"pal.thoiGianGiamDinh" | translate }}:</label>
-					<select ng-model="date_tgpt" class="select-date">
+					<select ng-model="data.date_tgpt" class="select-date">
                         <option value="dd/mm/yyyy">Full date</option>
                         <option value="mm/yyyy">Mon/Year</option>
                         <option value="yyyy">Year</option>
                     </select>
-					<input type="text" title="{{tooltips['thoiGianGiamDinh']}}" name="thoiGianGiamDinh" ng-model="data.thoiGianGiamDinh" placeholder="{{date_tgpt}}" id="thoiGianGiamDinh" class="input-form form-control datepicker">
+					<input type="text" title="{{tooltips['thoiGianGiamDinh']}}" name="thoiGianGiamDinh" ng-model="data.thoiGianGiamDinh" placeholder="{{data.date_tgpt}}" id="thoiGianGiamDinh" class="input-form form-control datepicker">
 				</div>
 			</div>
 			<div class="row">
@@ -545,12 +545,12 @@
 					<div class="row">
 						<div class="col-sm-4">
 							{{"pal.thoiGianXuLy" | translate }}:
-							<select ng-model="date_tgct" class="select-date">
+							<select ng-model="data.date_tgct" class="select-date">
 		                        <option value="dd/mm/yyyy">Full date</option>
 		                        <option value="mm/yyyy">Mon/Year</option>
 		                        <option value="yyyy">Year</option>
 		                    </select>
-							<input type="text" title="{{tooltips['thoiGianXuLy']}}" name="thoiGianXuLy" id="thoiGianXuLy" placeholder="{{date_tgct}}" ng-model="data.thoiGianXuLy" class="input-form form-control datepicker">
+							<input type="text" title="{{tooltips['thoiGianXuLy']}}" name="thoiGianXuLy" id="thoiGianXuLy" placeholder="{{data.date_tgct}}" ng-model="data.thoiGianXuLy" class="input-form form-control datepicker">
 						</div>
 						<div class="col-sm-4">
 							{{"pal.nguoiXuLy" | translate }}:
@@ -662,12 +662,12 @@
 			<div class="row">
 				<div class="col-sm-4">
 					<label>51. {{"pal.ngayNhapMau" | translate }}: </label>
-					<select ng-model="date_nnm" class="select-date">
+					<select ng-model="data.date_nnm" class="select-date">
                         <option value="dd/mm/yyyy">Full date</option>
                         <option value="mm/yyyy">Mon/Year</option>
                         <option value="yyyy">Year</option>
                     </select>
-					<input type="text" title="{{tooltips['ngayNhapMau']}}" id="ngayNhapMau" name="ngayNhapMau" ng-model="data.ngayNhapMau" placeholder="{{date_nnm}}" class="input-form form-control datepicker">
+					<input type="text" title="{{tooltips['ngayNhapMau']}}" id="ngayNhapMau" name="ngayNhapMau" ng-model="data.ngayNhapMau" placeholder="{{data.date_nnm}}" class="input-form form-control datepicker">
 				</div>
 				<div class="col-sm-4">
 					<label>52. {{"pal.nguoiGiao" | translate }}</label>
