--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -387,7 +387,7 @@
 						</div>
 						<div class="col-sm-4">
 							<label> </label><br>
-							<button type="button" class="btn btn-success" ng-click="showModal()">Chọn trên bản đồ</button>
+							<button type="button" class="btn btn-success" ng-click="showModal()"><i class="fa fa-map-marker" aria-hidden="true"></i> Chọn trên bản đồ</button>
 						</div>
 					</div>
 				</div>
