--- a/app/views/modals/storeShowModal.blade.html
+++ b/app/views/modals/storeShowModal.blade.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" data-ng-click="cancel()" aria-hidden="true">OK</button>
+    <button type="button" class="btn btn-success" style="float: right;" data-dismiss="modal" data-ng-click="cancel()" aria-hidden="true">OK</button>
     <h4 class="modal-title text-align-center fw-bold mt" id="myModalLabel18">{{ store.name }}</h4>
 </div>
 <div class="modal-body bg-gray-lighter">
