--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -1,4 +1,4 @@
-<!-- <div style="margin-top: 20px;" bs-loading-overlay bs-loading-overlay-delay="200"> -->
+<div class="col-sm-10 col-sm-offset-1 col-xs-12" bs-loading-overlay bs-loading-overlay-delay="200">
 	<form id="form-content" name="FormContent" ng-submit="addPost(FormContent, form)" novalidate>
 		<input type="hidden" name="randomStr" value="{{randomStr}}" id="randomStr">
 		<input type="hidden" name="sample" value="dong-vat" id="sample">
@@ -846,5 +846,5 @@
 			</center>
 		</div>
 	</form>
-<!-- </div> -->
+</div>
 <script type="text/javascript" src="asset/js/buttonfile/custom-file-input.js"></script>
