--- a/app/views/templates/search.template.html
+++ b/app/views/templates/search.template.html
@@ -15,7 +15,7 @@
         </div>
         <ul class="list-unstyled components">
             <li>
-                <a href="" data-toggle="collapse" aria-expanded="false">Tên mẫu vật</a>
+                <a href="" data-toggle="collapse" aria-expanded="false">Số hiệu BTTNVN</a>
                 <ul class="collapse list-unstyled" id="homeSubmenu">
                     <li><a href="">Home 1</a></li>
                     <li><a href="">Home 2</a></li>
@@ -23,8 +23,32 @@
                 </ul>
             </li>
             <li>
-                <a href="">About</a>
-                <a href="" data-toggle="collapse" aria-expanded="false">Quốc gia</a>
+                <a href="" data-toggle="collapse" aria-expanded="false">Số hiệu bảo tàng cơ sở</a>
+                <ul class="collapse list-unstyled" id="homeSubmenu">
+                    <li><a href="">Home 1</a></li>
+                    <li><a href="">Home 2</a></li>
+                    <li><a href="">Home 3</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="" data-toggle="collapse" aria-expanded="false">Tên khoa học</a>
+                <ul class="collapse list-unstyled" id="homeSubmenu">
+                    <li><a href="">Home 1</a></li>
+                    <li><a href="">Home 2</a></li>
+                    <li><a href="">Home 3</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="" data-toggle="collapse" aria-expanded="false">Người định tên</a>
+                <ul class="collapse list-unstyled" id="homeSubmenu">
+                    <li><a href="">Home 1</a></li>
+                    <li><a href="">Home 2</a></li>
+                    <li><a href="">Home 3</a></li>
+                </ul>
+            </li>
+            <li>
+                <a href="">Tên mẫu vật</a>
+                <a href="" data-toggle="collapse" aria-expanded="false">Tên Việt Nam</a>
                 <ul class="collapse list-unstyled" id="pageSubmenu">
                     <li><a href="">Page 1</a></li>
                     <li><a href="">Page 2</a></li>
@@ -282,7 +306,7 @@
     ul ul a {
         font-size: 0.9em !important;
         padding-left: 30px !important;
-        background: #6d7fcc;
+        /*background: #6d7fcc;*/
     }
 
     ul.CTAs {
