--- a/app/views/users/manage-post/manage-post.template.html
+++ b/app/views/users/manage-post/manage-post.template.html
@@ -1,6 +1,6 @@
 <script src="/javascripts/FileSaver.js"></script>
 <script src="/javascripts/circle-progress/circle-progress.min.js"></script>
-<div class="container-fluid">
+<div class="container-fluid col-sm-10 col-sm-offset-1 col-xs-12">
 	<div id="download-progress-bar-container" style="margin-bottom: 10px; margin-top: 20px; margin-left: 0px; display: none">
 		<div class="container" style="padding-left: 0px;">
 			<div class="col-lg-2 col-md-2 col-xs-12 col-sm-2">
