--- a/app/views/users/edit/edit-geological-form.template.html
+++ b/app/views/users/edit/edit-geological-form.template.html
@@ -1,4 +1,4 @@
-<!-- <div class="col-sm-10 col-sm-offset-1 col-xs-12" bs-loading-overlay bs-loading-overlay-delay="200"> -->
+<div class="col-sm-10 col-sm-offset-1 col-xs-12" bs-loading-overlay bs-loading-overlay-delay="200">
     <form id="form-content" name="FormData">
     	<input type="text" name="id" id="obId" style="display: none;" ng-model="data.id">
         <input type="hidden" name="randomStr" value="{{randomStr}}" id="randomStr">
@@ -970,6 +970,6 @@
     		</center>
     	</div>
     </form>
-<!-- </div> -->
+</div>
 <!-- Custom input file -->
 <script type="text/javascript" src="asset/js/buttonfile/custom-file-input.js"></script>
