--- a/app/views/templates/search.template.html
+++ b/app/views/templates/search.template.html
@@ -47,7 +47,14 @@
                 </ul>
             </li>
             <li>
-                <a href="">Tên mẫu vật</a>
+                <a href="" data-toggle="collapse" aria-expanded="false">Ngày định tên</a>
+                <ul class="collapse list-unstyled" id="homeSubmenu">
+                    <li><a href="">Home 1</a></li>
+                    <li><a href="">Home 2</a></li>
+                    <li><a href="">Home 3</a></li>
+                </ul>
+            </li>
+            <li>
                 <a href="" data-toggle="collapse" aria-expanded="false">Tên Việt Nam</a>
                 <ul class="collapse list-unstyled" id="pageSubmenu">
                     <li><a href="">Page 1</a></li>
@@ -56,10 +63,28 @@
                 </ul>
             </li>
             <li>
-                <a href="">Vị trí địa lý</a>
+                <a href="">Tên địa phương</a>
             </li>
             <li>
-                <a href="">Người lập phiếu</a>
+                <a href="">Tên Tiếng Anh</a>
+            </li>
+            <li>
+                <a href="">Địa điểm thu mẫu</a>
+            </li>
+            <li>
+                <a href="">Vị trí tọa độ</a>
+            </li>
+            <li>
+                <a href="">Phân bố Việt Nam</a>
+            </li>
+            <li>
+                <a href="">Phân bố thế giới</a>
+            </li>
+            <li>
+                <a href="">Nơi lưu giữ mẫu</a>
+            </li>
+            <li>
+                <a href="">Khu lưu trữ mẫu</a>
             </li>
         </ul>
     </nav>
@@ -271,7 +296,8 @@
     }
 
     #sidebar ul li a {
-        padding: 10px;
+        padding: 5px;
+        padding-left: 10px;
         font-size: 1.1em;
         display: block;
     }
