--- a/app/views/templates/search.template.html
+++ b/app/views/templates/search.template.html
@@ -1,13 +1,12 @@
 <div class="wrapper">
-    <!-- Sidebar Holder -->
     <nav id="sidebar">
         <div class="sidebar-header">
             <form class="navbar-form navbar-right" role="search" ng-controller="SearchController">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Tìm kiếm...">
+                    <input type="text" class="form-control" ng-model="searchContent" placeholder="Tìm kiếm...">
                     <span class="input-group-btn">
-                        <a ui-sref="tim-kiem" class="btn btn-default">
-                            <span class=" glyphicon glyphicon-search SearchIcon"></span>
+                        <a ui-sref="tim-kiem" ng-click="search(searchContent)" class="btn btn-default">
+                            <span class=" glyphicon glyphicon-search "></span>
                         </a>
                     </span>
                 </div>
@@ -23,7 +22,7 @@
                 </ul>
             </li>
             <li>
-                <a href="">About</a>
+                <a href="">Nguời nhập vào phần mềm</a>
                 <a href="" data-toggle="collapse" aria-expanded="false">Quốc gia</a>
                 <ul class="collapse list-unstyled" id="pageSubmenu">
                     <li><a href="">Page 1</a></li>
@@ -282,7 +281,6 @@
     ul ul a {
         font-size: 0.9em !important;
         padding-left: 30px !important;
-        background: #6d7fcc;
     }
 
     ul.CTAs {
